--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>SocketServer</title>
   </head>
   <body>
-    <h1>Acceso denegado</h1>
+    <h1>Access Denied</h1>
 
     <script src="socket.io/socket.io.js"></script>
 
@@ -14,17 +14,17 @@
       var socket = io();
 
       socket.on('connect', function () {
-        console.log('Conectado al servidor');
+        console.log('Contected to server');
       });
 
       socket.on('disconnect', function () {
-        console.log('Perdimos comunicación con el servidor');
+        console.log('Lost comunication to server');
       });
 
-      socket.emit('message', { nombre: 'Fernando' });
+      socket.emit('message', { name: 'Esteban' });
 
       socket.on('message', function (payload) {
-        console.log('Escuhando:', payload);
+        console.log('Listening:', payload);
       });
     </script>
   </body>
