added packages + hotfixes

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <script src="socket.io/socket.io.js"></script>
 
-    <script>
+    <!-- <script>
       var socket = io();
 
       socket.on('connect', function () {
@@ -26,6 +26,6 @@
       socket.on('message', function (payload) {
         console.log('Listening:', payload);
       });
-    </script>
+    </script> -->
   </body>
 </html>
